[package]
name = "syrasp"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = [ "cargo" ] }
env_logger = "0.11.3"
log = "0.4.21"
rppal = { version = "0.18.0", features = [ "embedded-hal" ] }
syact = "0.13.1"
syunit = "0.1.6"
tokio = { version = "1.37.0", features = ["full"] }

# Binaries
    [[bin]]
    name = "led"
    path = "bin/led.rs"

    # Stepper
        [[bin]]
        name = "stepper-fixed_dist"
        path = "bin/stepper/fixed_dist.rs"
    #
#
